--- a/ReplayMe/AfterLogin/CoustomeCell/CollectionViewCell/OtherUserCollectionCell.xib
+++ b/ReplayMe/AfterLogin/CoustomeCell/CollectionViewCell/OtherUserCollectionCell.xib
@@ -7,8 +7,8 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Roboto-Medium.ttf">
-            <string>Roboto-Medium</string>
+        <array key="Roboto-Bold.ttf">
+            <string>Roboto-Bold</string>
         </array>
         <array key="Roboto-Regular.ttf">
             <string>Roboto-Regular</string>
@@ -27,13 +27,13 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZFa-0G-puv">
                         <rect key="frame" x="0.0" y="0.0" width="236" height="174"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" asnksdfkjsdhf  sdkhjgh  dhgkdf gkjdfgh kdfg" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xr5-oJ-b3B">
-                        <rect key="frame" x="4" y="124" width="229" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tandav" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xr5-oJ-b3B">
+                        <rect key="frame" x="4" y="108" width="229" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="nMb-lY-FFj"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="14"/>
-                        <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="14.399999618530273"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 views" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ptg-YF-ZNh">
@@ -45,7 +45,7 @@
                         <color key="textColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_play_circle_filled" translatesAutoresizingMaskIntoConstraints="NO" id="TxA-XH-wrP">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TxA-XH-wrP">
                         <rect key="frame" x="98" y="66" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="NMW-2g-lgI"/>
@@ -57,7 +57,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Ptg-YF-ZNh" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="Bs7-2N-7Wq"/>
-                <constraint firstItem="Ptg-YF-ZNh" firstAttribute="top" secondItem="Xr5-oJ-b3B" secondAttribute="bottom" constant="2" id="RNI-eP-QcB"/>
+                <constraint firstItem="Ptg-YF-ZNh" firstAttribute="top" secondItem="Xr5-oJ-b3B" secondAttribute="bottom" constant="18" id="RNI-eP-QcB"/>
                 <constraint firstAttribute="trailing" secondItem="Ptg-YF-ZNh" secondAttribute="trailing" constant="81" id="StX-a0-Obw"/>
                 <constraint firstItem="ZFa-0G-puv" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="0.10000000000000001" id="VEh-ME-vNg"/>
                 <constraint firstItem="Xr5-oJ-b3B" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="dej-y3-kL2"/>
@@ -66,7 +66,7 @@
                 <constraint firstItem="TxA-XH-wrP" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="-1" id="pwU-zN-1bK"/>
                 <constraint firstItem="TxA-XH-wrP" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="uic-g6-GeC"/>
                 <constraint firstAttribute="trailing" secondItem="ZFa-0G-puv" secondAttribute="trailing" constant="0.10000000000000001" id="vhf-nL-sIL"/>
-                <constraint firstItem="Xr5-oJ-b3B" firstAttribute="top" secondItem="ZFa-0G-puv" secondAttribute="bottom" constant="-50" id="wBO-MF-5gP"/>
+                <constraint firstItem="Xr5-oJ-b3B" firstAttribute="top" secondItem="ZFa-0G-puv" secondAttribute="bottom" constant="-66" id="wBO-MF-5gP"/>
                 <constraint firstItem="ZFa-0G-puv" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="0.10000000000000001" id="yMz-gj-x8R"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
@@ -79,7 +79,4 @@
             <point key="canvasLocation" x="20.289855072463769" y="135.26785714285714"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="ic_play_circle_filled" width="36" height="36"/>
-    </resources>
 </document>
