--- a/ReplayMe/AfterLogin/CoustomeCell/TableViewCell/OtherUserTblCell.xib
+++ b/ReplayMe/AfterLogin/CoustomeCell/TableViewCell/OtherUserTblCell.xib
@@ -15,17 +15,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableviewcellid" rowHeight="104" id="KGk-i7-Jjw" customClass="OtherUserTblCell" customModule="ReplayMeApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="317" height="129"/>
+            <rect key="frame" x="0.0" y="0.0" width="207" height="129"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="317" height="129"/>
+                <rect key="frame" x="0.0" y="0.0" width="207" height="129"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="gFz-pc-6bN">
-                        <rect key="frame" x="0.0" y="0.0" width="317" height="129"/>
+                        <rect key="frame" x="0.0" y="0.0" width="207" height="129"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XIl-4v-a1d">
-                            <size key="itemSize" width="150" height="180"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="XIl-4v-a1d">
+                            <size key="itemSize" width="150" height="150"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
@@ -65,10 +65,10 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="collectionView" destination="gFz-pc-6bN" id="wA0-yz-122"/>
-                <outlet property="titileLbl" destination="rMG-fd-l2Y" id="LIH-Sp-CJh"/>
+                <outlet property="titileLbl" destination="rMG-fd-l2Y" id="hqG-Tn-GNp"/>
                 <outlet property="totalVideoCount" destination="Ahh-8z-XBy" id="cxf-wX-hIn"/>
             </connections>
-            <point key="canvasLocation" x="138.40579710144928" y="119.53125"/>
+            <point key="canvasLocation" x="58.695652173913047" y="119.53125"/>
         </tableViewCell>
     </objects>
 </document>
